feat: add second viz

--- a/src/main/dataviz2.ipynb
+++ b/src/main/dataviz2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "23c98045",
    "metadata": {},
    "outputs": [],
@@ -23,8 +23,7 @@
     "import numpy as np\n",
     "\n",
     "input_path = os.path.join(os.sep, \"home\", \"dataset\")\n",
-    "preprocess_output_path = os.path.join(os.sep, \"home\", \"preprocess_results\")\n",
-    "output_path = os.path.join(os.sep, \"home\", \"results\")"
+    "output_path = os.path.join(os.sep, \"home\", \"preprocess_results\")"
    ]
   },
   {
@@ -37,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "02f00154",
    "metadata": {},
    "outputs": [],
@@ -68,7 +67,7 @@
     "missing_threshold = 0.6\n",
     "cleaned_df = merged_df.loc[:, merged_df.isnull().mean() < missing_threshold]\n",
     "\n",
-    "merged_df.to_csv(os.path.join(preprocess_output_path, 'merged_data.csv'), index=False)"
+    "merged_df.to_csv(os.path.join(output_path, 'merged_data.csv'), index=False)"
    ]
   },
   {
@@ -81,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "50373e0e",
    "metadata": {},
    "outputs": [
@@ -405,7 +404,7 @@
        "[6152351 rows x 16 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "451a4777",
    "metadata": {},
    "outputs": [],
@@ -468,7 +467,7 @@
     "        filtered_df[\"sound_avg_linear\"] = 10 ** (filtered_df[\"sound_avg\"] / 20)\n",
     "        filtered_df[\"sound_peak_linear\"] = 10 ** (filtered_df[\"sound_peak\"] / 20)\n",
     "\n",
-    "    filtered_df.to_csv(os.path.join(preprocess_output_path, \"filtered_data.csv\"), index=False)\n",
+    "    filtered_df.to_csv(os.path.join(output_path, \"filtered_data.csv\"), index=False)\n",
     "    return filtered_df\n",
     "\n",
     "filtered_df = clean_dataset(merged_df, \"motion\", \"sound_avg\")"
@@ -476,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "02db827c",
    "metadata": {},
    "outputs": [
@@ -814,7 +813,7 @@
        "[2160 rows x 18 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +841,7 @@
     "    longitude=(\"longitude\", \"first\"),\n",
     ").reset_index()\n",
     "\n",
-    "grouped_df.to_csv(os.path.join(preprocess_output_path, 'grouped_data.csv'), index=False)\n",
+    "grouped_df.to_csv(os.path.join(output_path, 'grouped_data.csv'), index=False)\n",
     "\n",
     "grouped_df"
    ]
@@ -852,13 +851,21 @@
    "id": "2bd25767",
    "metadata": {},
    "source": [
+    "### More overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6e854b5",
+   "metadata": {},
+   "source": [
     "### Visualization 1 - Manuele Pasini"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "48bb44ac",
+   "execution_count": 13,
+   "id": "ad264b2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,8 +876,320 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9c9aa61d",
+   "execution_count": 14,
+   "id": "dec70fb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>device_id</th>\n",
+       "      <th>floor</th>\n",
+       "      <th>desc</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>time</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>light</th>\n",
+       "      <th>motion</th>\n",
+       "      <th>co2</th>\n",
+       "      <th>battery</th>\n",
+       "      <th>sound_avg</th>\n",
+       "      <th>sound_peak</th>\n",
+       "      <th>moisture</th>\n",
+       "      <th>pressure</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>60487</th>\n",
+       "      <td>A81758FFFE030F6A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Tellus Cube 6</td>\n",
+       "      <td>65.05875</td>\n",
+       "      <td>25.46565</td>\n",
+       "      <td>2020-09-01 00:01:28+00:00</td>\n",
+       "      <td>21.5</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>388.0</td>\n",
+       "      <td>3.698</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60488</th>\n",
+       "      <td>A81758FFFE030F6A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Tellus Cube 6</td>\n",
+       "      <td>65.05875</td>\n",
+       "      <td>25.46565</td>\n",
+       "      <td>2020-09-01 00:31:28+00:00</td>\n",
+       "      <td>21.4</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>389.0</td>\n",
+       "      <td>3.698</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60489</th>\n",
+       "      <td>A81758FFFE030F6A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Tellus Cube 6</td>\n",
+       "      <td>65.05875</td>\n",
+       "      <td>25.46565</td>\n",
+       "      <td>2020-09-01 00:46:28+00:00</td>\n",
+       "      <td>21.3</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>389.0</td>\n",
+       "      <td>3.698</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60490</th>\n",
+       "      <td>A81758FFFE030F6A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Tellus Cube 6</td>\n",
+       "      <td>65.05875</td>\n",
+       "      <td>25.46565</td>\n",
+       "      <td>2020-09-01 01:01:28+00:00</td>\n",
+       "      <td>21.4</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>398.0</td>\n",
+       "      <td>3.698</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60491</th>\n",
+       "      <td>A81758FFFE030F6A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Tellus Cube 6</td>\n",
+       "      <td>65.05875</td>\n",
+       "      <td>25.46565</td>\n",
+       "      <td>2020-09-01 01:16:28+00:00</td>\n",
+       "      <td>21.3</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>394.0</td>\n",
+       "      <td>3.698</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6152346</th>\n",
+       "      <td>A81758FFFE030FFE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Hallway next to LO105</td>\n",
+       "      <td>65.05809</td>\n",
+       "      <td>25.46576</td>\n",
+       "      <td>2021-02-23 19:29:38+00:00</td>\n",
+       "      <td>21.8</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>635.0</td>\n",
+       "      <td>3.689</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6152347</th>\n",
+       "      <td>A81758FFFE030FFE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Hallway next to LO105</td>\n",
+       "      <td>65.05809</td>\n",
+       "      <td>25.46576</td>\n",
+       "      <td>2021-02-23 19:44:38+00:00</td>\n",
+       "      <td>21.9</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>640.0</td>\n",
+       "      <td>3.686</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6152348</th>\n",
+       "      <td>A81758FFFE030FFE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Hallway next to LO105</td>\n",
+       "      <td>65.05809</td>\n",
+       "      <td>25.46576</td>\n",
+       "      <td>2021-02-23 19:59:38+00:00</td>\n",
+       "      <td>21.8</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>636.0</td>\n",
+       "      <td>3.689</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6152349</th>\n",
+       "      <td>A81758FFFE030FFE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Hallway next to LO105</td>\n",
+       "      <td>65.05809</td>\n",
+       "      <td>25.46576</td>\n",
+       "      <td>2021-02-23 20:14:38+00:00</td>\n",
+       "      <td>21.8</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>637.0</td>\n",
+       "      <td>3.686</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6152350</th>\n",
+       "      <td>A81758FFFE030FFE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Hallway next to LO105</td>\n",
+       "      <td>65.05809</td>\n",
+       "      <td>25.46576</td>\n",
+       "      <td>2021-02-23 20:29:38+00:00</td>\n",
+       "      <td>21.8</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>636.0</td>\n",
+       "      <td>3.686</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1561945 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                device_id  floor                   desc  latitude  longitude  \\\n",
+       "60487    A81758FFFE030F6A      1          Tellus Cube 6  65.05875   25.46565   \n",
+       "60488    A81758FFFE030F6A      1          Tellus Cube 6  65.05875   25.46565   \n",
+       "60489    A81758FFFE030F6A      1          Tellus Cube 6  65.05875   25.46565   \n",
+       "60490    A81758FFFE030F6A      1          Tellus Cube 6  65.05875   25.46565   \n",
+       "60491    A81758FFFE030F6A      1          Tellus Cube 6  65.05875   25.46565   \n",
+       "...                   ...    ...                    ...       ...        ...   \n",
+       "6152346  A81758FFFE030FFE      1  Hallway next to LO105  65.05809   25.46576   \n",
+       "6152347  A81758FFFE030FFE      1  Hallway next to LO105  65.05809   25.46576   \n",
+       "6152348  A81758FFFE030FFE      1  Hallway next to LO105  65.05809   25.46576   \n",
+       "6152349  A81758FFFE030FFE      1  Hallway next to LO105  65.05809   25.46576   \n",
+       "6152350  A81758FFFE030FFE      1  Hallway next to LO105  65.05809   25.46576   \n",
+       "\n",
+       "                             time  temperature  humidity  light  motion  \\\n",
+       "60487   2020-09-01 00:01:28+00:00         21.5      43.0    6.0     0.0   \n",
+       "60488   2020-09-01 00:31:28+00:00         21.4      43.0    6.0     0.0   \n",
+       "60489   2020-09-01 00:46:28+00:00         21.3      43.0    6.0     0.0   \n",
+       "60490   2020-09-01 01:01:28+00:00         21.4      43.0    6.0     0.0   \n",
+       "60491   2020-09-01 01:16:28+00:00         21.3      43.0    6.0     0.0   \n",
+       "...                           ...          ...       ...    ...     ...   \n",
+       "6152346 2021-02-23 19:29:38+00:00         21.8       7.0   41.0     2.0   \n",
+       "6152347 2021-02-23 19:44:38+00:00         21.9       7.0    3.0     0.0   \n",
+       "6152348 2021-02-23 19:59:38+00:00         21.8       7.0    3.0     0.0   \n",
+       "6152349 2021-02-23 20:14:38+00:00         21.8       7.0    3.0     0.0   \n",
+       "6152350 2021-02-23 20:29:38+00:00         21.8       7.0    3.0     0.0   \n",
+       "\n",
+       "           co2  battery  sound_avg  sound_peak  moisture  pressure  \n",
+       "60487    388.0    3.698        NaN         NaN       NaN       NaN  \n",
+       "60488    389.0    3.698        NaN         NaN       NaN       NaN  \n",
+       "60489    389.0    3.698        NaN         NaN       NaN       NaN  \n",
+       "60490    398.0    3.698        NaN         NaN       NaN       NaN  \n",
+       "60491    394.0    3.698        NaN         NaN       NaN       NaN  \n",
+       "...        ...      ...        ...         ...       ...       ...  \n",
+       "6152346  635.0    3.689        NaN         NaN       NaN       NaN  \n",
+       "6152347  640.0    3.686        NaN         NaN       NaN       NaN  \n",
+       "6152348  636.0    3.689        NaN         NaN       NaN       NaN  \n",
+       "6152349  637.0    3.686        NaN         NaN       NaN       NaN  \n",
+       "6152350  636.0    3.686        NaN         NaN       NaN       NaN  \n",
+       "\n",
+       "[1561945 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5698f5a7",
    "metadata": {},
    "outputs": [
     {
@@ -995,6 +1314,73 @@
    "metadata": {},
    "source": [
     "### Visualization 1 - Gianni Tumedei"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d31834bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>device_id</th>\n",
+       "      <th>floor</th>\n",
+       "      <th>desc</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>time</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>light</th>\n",
+       "      <th>motion</th>\n",
+       "      <th>co2</th>\n",
+       "      <th>battery</th>\n",
+       "      <th>sound_avg</th>\n",
+       "      <th>sound_peak</th>\n",
+       "      <th>moisture</th>\n",
+       "      <th>pressure</th>\n",
+       "      <th>restroom</th>\n",
+       "      <th>motion_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [device_id, floor, desc, latitude, longitude, time, temperature, humidity, light, motion, co2, battery, sound_avg, sound_peak, moisture, pressure, restroom, motion_type]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
    ]
   }
  ],
